# go2_ros2_sdk

./: requirements.txt
coco_detector/: setup.cfg
coco_detector/coco_detector/: coco_detector_node.py
coco_detector_v2/: package.xml
docker/: Dockerfile
go2_robot_sdk/go2_robot_sdk/: go2_driver_node.py
