[metadata]
name = coco_detector
version = 0.0.0
description = COCO detector node

[options]
packages = find:
install_requires =
    rclpy
    numpy
    torch
    torchvision
    opencv-python
    vision_msgs
    cv_bridge

[options.entry_points]
console_scripts =
    coco_detector_node = coco_detector.coco_detector_node:main